--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/font-awesome-4.7.0/css/font-awesome.css";
+
+*{
+  margin: 0 auto;
+  padding: 0;
+}
