add components navigation and slider

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,8 @@
   <div class="header-content">
     <div class="logo"><img src="../../assets/logo2.JPG" alt="logo"></div>
     <div class="search">
-      <input class="search__field" type="text" placeholder="Искать товары">
+      <input class="search-field" type="text" placeholder="Искать товары">
+      <i class="fa fa-search"></i>
     </div>
     <div class="icons">
       <a href=""><i class="fa fa-heart-o"></i></a>
