--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -20,7 +20,8 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      .search__field{
+      position: relative;
+      .search-field{
         border: none;
         border-bottom: 3px solid black;
         padding: 15px;
@@ -28,21 +29,20 @@
         outline: none;
         position: relative;
         z-index: 0;
-        :hover{
-          border-bottom: red;
+        &:hover{
+          border-bottom-color: red;
         }
-        .fa-search{
-          width: 20px;
-          height: 20px;
-          display: block;
-          background-color: red;
-          color: red;
-          margin-left: 20px;
-          position: absolute;
-          z-index: 2;
-          left: 0;
-        }
-
+      }
+      .search-field:focus ~ .fa-search{
+        display: none;
+      }
+      .fa-search{
+        width: 20px;
+        height: 20px;
+        margin-left: 20px;
+        position: absolute;
+        z-index: 2;
+        right: 0;
       }
     }
     .icons{
