--- a/src/app/home/slider/slider-item/slider-item.component.scss
+++ b/src/app/home/slider/slider-item/slider-item.component.scss
@@ -1,18 +1,17 @@
 .slider-item{
-  max-width: 1280px;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  gap: 0 75px;
   align-items: center;
   &-image{
     width: 100%;
-    max-width: 550px;
+    max-width: 750px;
     display: flex;
     align-items: center;
   }
   &-text{
     width: 100%;
-    max-width: 500px;
+    max-width: 675px;
   }
   &-title{
     font-size: 30px;
