--- a/src/app/home/slider/slider.component.scss
+++ b/src/app/home/slider/slider.component.scss
@@ -1,11 +1,7 @@
 .container{
   width: 100%;
+  max-width: 1500px;
   height: auto;
-  background-image: url("../../../assets/background-slider.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: 0 auto;
   position: relative;
   .slider-dots{
     position: absolute;
