--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,12 @@
 @import "assets/font-awesome-4.7.0/css/font-awesome.css";
 
 *{
-  margin: 0 auto;
+  margin: 0;
+  box-sizing: border-box;
   padding: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
