--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <app-header></app-header>
   <app-navigation></app-navigation>
-  <app-home></app-home>
+  <app-home-page></app-home-page>
 </div>
