--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,4 @@
 <app-slider></app-slider>
 <app-brands></app-brands>
 <app-category-panel></app-category-panel>
+<app-quick-access-panel></app-quick-access-panel>
