--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <app-header></app-header>
   <app-navigation></app-navigation>
   <app-home-page></app-home-page>
+  <app-footer></app-footer>
 </div>
