Add component auth, modules auth and home-page, made lazy-loading to home-page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
       <i class="fa fa-search"></i>
     </div>
     <div class="icons">
-      <a href=""><i class="fa fa-heart-o"></i></a>
+      <a href="" routerLink="/auth"><i class="fa fa-heart-o"></i></a>
       <a href=""><i class="fa fa-user-o"></i></a>
       <a href=""><i class="fa fa-shopping-cart"></i></a>
     </div>
