--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <div class="container">
-  <app-header></app-header>
-  <app-navigation></app-navigation>
-  <app-home-page></app-home-page>
-  <app-footer></app-footer>
+  <router-outlet></router-outlet>
 </div>
