--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,7 @@
+<app-header></app-header>
+<app-navigation></app-navigation>
 <app-slider></app-slider>
 <app-brands></app-brands>
 <app-category-panel></app-category-panel>
 <app-quick-access-panel></app-quick-access-panel>
+<app-footer></app-footer>
