--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,12 +9,12 @@
     <div class="icons footer-content-item">
       <h2 class="feed-back-title">Оставайтесь с нами на связи!</h2>
       <div class="feed-back-icons">
-        <a href=""><i class="fa fa-instagram"></i></a>
-        <a href=""><i class="fa fa-facebook"></i></a>
-        <a href=""><i class="fa fa-vk"></i></a>
-        <a href=""><i class="fa fa-github"></i></a>
-        <a href=""><i class="fa fa-linkedin"></i></a>
-        <a href=""><i class="fa fa- fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-vk"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa- fa-twitter"></i></a>
       </div>
     </div>
   </div>
