--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -1,4 +1,4 @@
-.auth-page{
+.auth-page {
   width: 100%;
   min-height: 100vh;
   background-image: url("../../assets/background-auth.jpg");
@@ -7,189 +7,159 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  .container{
-    max-width: 500px;
-    width:40%;
-    background-color: white;
-    border-radius: 5px;
-    height: 80vh;
+
+  .container {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    form{
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      align-items: center;
+    max-width: 500px;
+    width: 100%;
+    padding: 16px 8px;
+    border-radius: 5px;
+    background-color: white;
+  }
+
+  .form {
+    &-title {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: bold;
+      font-size: 32px;
+      line-height: 32px;
+      margin-bottom: 24px;
+      margin-top: 24px;
+    }
+    &-control {
+      max-width: 360px;
       width: 100%;
-      height: 80%;
-      .auth-title{
-        font-size: 45px;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: bold;
-        width: 100%;
-        text-align: center;
+      margin-bottom: 24px;
+
+      &-input:focus {
+        -webkit-animation: anim-shadow 0.5s ease-in-out forwards;
+        animation: anim-shadow 0.5s ease-in-out forwards;
+        color: red;
       }
-      .wrap-input{
-        position: relative;
-        width: 80%;
-        z-index: 1;
-        .auth-field{
-          font-family: sans-serif;
-          font-size: 18px;
-          line-height: 1.2;
-          color: #686868;
-          display: block;
-          width: 100%;
-          background: #e6e6e6;
-          height: 62px;
-          border-radius: 3px;
-          padding: 0 30px 0 65px;
-          border: none;
-          outline: none;
-        }
-        .focus-input{
-          display: block;
-          position: absolute;
-          border-radius: 3px;
-          bottom: 0;
-          left: 0;
-          z-index: -1;
-          width: 100%;
-          height: 100%;
-          box-shadow: 0 0 0 0;
-          color: red;
-        }
-        .auth-field:focus + .focus-input {
-          -webkit-animation: anim-shadow 0.5s ease-in-out forwards;
-          animation: anim-shadow 0.5s ease-in-out forwards;
-        }
-        @-webkit-keyframes anim-shadow {
-          to {
-            box-shadow: 0 0 60px 20px;
-            opacity: 0;
-          }
-        }
-        @keyframes anim-shadow {
-          to {
-            box-shadow: 0 0 60px 20px;
-            opacity: 0;
-          }
+
+      @-webkit-keyframes anim-shadow {
+        to{
+          box-shadow: 0 0 60px 20px;
+          opacity: 0;
         }
       }
-      .contact-form-checkbox{
-        width: 80%;
-        .input-checkbox {
-            position: absolute;
-            z-index: -1;
-            opacity: 0;
-          }
-        .input-checkbox+label {
-          display: inline-flex;
-          align-items: center;
-          user-select: none;
-        }
-        .input-checkbox+label::before {
-          content: '';
-          display: inline-block;
-          width: 1em;
-          height: 1em;
-          flex-shrink: 0;
-          flex-grow: 0;
-          border: 1px solid #adb5bd;
-          border-radius: 0.25em;
-          margin-right: 0.5em;
-          background-repeat: no-repeat;
-          background-position: center center;
-          background-size: 50% 50%;
-        }
-        .input-checkbox:checked+label::before {
-          border-color: red;
-          background-color: red;
-        }
-        .input-checkbox:not(:disabled):not(:checked)+label:hover::before {
-          border-color: lightpink;
-        }
-        .input-checkbox:not(:disabled):active+label::before {
-          background-color: lightpink;
-          border-color: lightpink;
-        }
-        .input-checkbox:focus+label::before {
-          box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-        }
-        .input-checkbox:focus:not(:checked)+label::before {
-          border-color: #d33f8d;
-        }
-        .input-checkbox:disabled+label::before {
-          background-color: lightpink;
-        }
-        .label-checkbox{
-          font-family: sans-serif;
-          font-size: 16px;
-          color: #999999;
-          line-height: 1.2;
-          display: block;
-          position: relative;
-          padding-left: 26px;
-          cursor: pointer;
-        }
-        .input-checkbox:checked + .label-checkbox::before {
-          color: #d33f8d;
+
+      @keyframes anim-shadow {
+        to{
+          box-shadow: 0 0 60px 20px;
+          opacity: 0;
         }
       }
-      button{
-        width: 80%;
-        padding: 20px;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: bold;
-        font-size: 20px;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        border: none;
-        outline: none;
-        background-color: red;
-        color: white;
-        transition: 0.4s;
-        &:hover{
-          background-color: black;
-          transition: 0.4s;
-        }
-      }
-      span{
-        width: 100%;
-        text-align: center;
-        font-size: 15px;
-        font-family: 'Montserrat', sans-serif;
-      }
-      .google-acc-link{
-        width: 80%;
-        padding: 10px;
-        color: black;
-        text-decoration: none;
-        font-family: 'Montserrat', sans-serif;
+
+      &.label-checkbox {
         display: flex;
         align-items: center;
-        justify-content: center;
-        font-size: 30px;
-        border: 2px solid lightgray;
-        img{
-          width: 50px;
-          height: 50px;
-          margin-right: 5px;
+        margin-bottom: 34px;
+
+        .checkbox-control {
+          max-width: 20px;
+          width: 100%;
+          min-height: 20px;
+          max-height: 20px;
+          background: #d1d1d1;
+          transition: 0.1s;
+          position: relative;
         }
-        &:hover{
-          color: red;
-          border: 2px solid red;
+
+        .input-checkbox:checked ~ .checkbox-control {
+          background-color: #006ab2;
+
+          &::after {
+            color: white;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            content: "✔";
+            font-size: 18px;
+            line-height: 20px;
+          }
+        }
+
+        .control-title {
+          margin-left: 8px;
+          font-size: 16px;
+          line-height: 1.25;
+          color: black;
+        }
+
+        input {
+          display: none;
+          &:checked {
+          }
         }
       }
-      .registration-link{
-        color: lightgray;
-        border-bottom: 2px solid lightgray;
-        text-decoration: none;
-        font-family: sans-serif;
-        &:hover{
-          color: red;
-        }
+
+      input {
+        padding: 11px 10px;
+        font-size: 16px;
+        line-height: 18px;
+        width: 100%;
       }
     }
+
+    &-button {
+      font-family: 'Montserrat',sans-serif;
+      font-size: 20px;
+      font-weight: bold;
+      max-width: 280px;
+      width: 100%;
+      padding: 12px 10px;
+      display: flex;
+      color: white;
+      justify-content: center;
+      align-items: center;
+      background-color: red;
+      transition: 0.4s;
+      &:hover {
+        background-color: black;
+        transition: 0.4s;
+      }
+    }
+
+  }
+
+  .auth-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    margin-bottom: 24px;
+  }
+
+  .auth-title {
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 24px;
+  }
+
+  .auth-button {
+    max-width: 240px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4px 10px;
+    gap: 0 16px;
+    background-color: white;
+    margin-bottom: 24px;
+
+    img {
+      max-width: 36px;
+    }
+  }
+
+  .auth-link {
+    font-size: 16px;
+    color: black;
+    line-height: 20px;
+    margin-bottom: 24px;
   }
 }
