--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,9 +6,9 @@
       <i class="fa fa-search"></i>
     </div>
     <div class="icons">
-      <a href="" routerLink="/auth"><i class="fa fa-heart-o"></i></a>
-      <a href=""><i class="fa fa-user-o"></i></a>
-      <a href=""><i class="fa fa-shopping-cart"></i></a>
+      <a (click)="logout()"><i class="fa fa-heart-o"></i></a>
+      <a href="#"><i class="fa fa-user-o"></i></a>
+      <a href="#"><i class="fa fa-shopping-cart"></i></a>
     </div>
   </div>
 </div>
