--- a/src/app/home-page/category-panel/category-panel-item/category-panel-item.component.scss
+++ b/src/app/home-page/category-panel/category-panel-item/category-panel-item.component.scss
@@ -16,6 +16,7 @@
     width: 100%;
     max-width: 280px;
     background-color: white;
+    font-weight: bold;
     border-radius: 20px;
     text-align: center;
     left:50%;
