Add component item-page

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -3,10 +3,10 @@
     <form class="auth-form">
       <h2 class="form-title">Login</h2>
       <label for="email" class="form-control">
-        <input class="form-control-input" type="text" id="email" placeholder="Email">
+        <input class="form-control-input" type="text" id="email" placeholder="Email" autocomplete="off">
       </label>
       <label for="password" class="form-control">
-        <input class="form-control-input" type="password" id="password" placeholder="Password">
+        <input class="form-control-input" type="password" id="password" placeholder="Password" autocomplete="off">
       </label>
       <label for="happy" class="form-control label-checkbox">
         <input type="checkbox" class="input-checkbox" id="happy">
