--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<!--<div class="container">-->
+<!--  <router-outlet></router-outlet>-->
+<!--</div>-->
+
+<app-item-page></app-item-page>
