--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -34,6 +34,7 @@
       margin-bottom: 24px;
 
       &-input:focus {
+        opacity: 1!important;
         -webkit-animation: anim-shadow 0.5s ease-in-out forwards;
         animation: anim-shadow 0.5s ease-in-out forwards;
         color: red;
