Refactoring some modules. Add navigation service for building absolute links. Implemented partly cart service and fix some bugs.

--- a/src/app/home-page/quick-access-panel/quick-access-panel-item/quick-access-panel-item.component.html
+++ b/src/app/home-page/quick-access-panel/quick-access-panel-item/quick-access-panel-item.component.html
@@ -1,4 +1,5 @@
-<div class="quick-access-item" *ngIf="item">
+<div class="quick-access-item" *ngIf="item"
+     [routerLink]="link">
   <img [src]="item.brand" alt="" class="quick-access-item-brand">
   <img [src]="item.image" alt="" class="quick-access-item-image">
   <h2 class="quick-access-item-id">id товара: {{item.id}}</h2>
