--- a/src/app/home-page/quick-access-panel/quick-access-panel-item/quick-access-panel-item.component.scss
+++ b/src/app/home-page/quick-access-panel/quick-access-panel-item/quick-access-panel-item.component.scss
@@ -4,6 +4,7 @@
   justify-content: space-around;
   max-width: 330px;
   height: 100%;
+  cursor: pointer;
   border: gray solid 3px;
   &-brand {
     max-width: 60px;
