--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <app-navigation></app-navigation>
+
 <div class="container">
-  item-page
+  <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
