--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -15,7 +15,7 @@
           Remember me
         </span>
       </label>
-      <button class="form-button" routerLink="/home">Login</button>
+      <button class="form-button">Login</button>
     </form>
     <h2 class="title auth-title">Or login with</h2>
     <button (click)="login()" class="auth-button">
