--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
     <div class="icons">
       <a (click)="logout()"><i class="fa fa-heart-o"></i></a>
       <a href="#"><i class="fa fa-user-o"></i></a>
-      <a href="#"><i class="fa fa-shopping-cart"></i></a>
+      <a [routerLink]="cartLink"><i class="fa fa-shopping-cart"></i></a>
     </div>
   </div>
 </div>
