--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,6 @@ nav, footer, header, aside {
 html, body {
   height: 100%;
   width: 100%;
-  font-size: 100%;
   line-height: 1;
   font-size: 16px;
   -ms-text-size-adjust: 100%;
@@ -73,4 +72,15 @@ img {
 h1, h2, h3, h4, h5, h6 {
   font-size: inherit;
   font-weight: 400;
+}
+
+app-cart {
+  height: 100%;
+}
+
+.title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 50px;
 }
