--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -9,6 +9,7 @@
     .logo{
       width: auto;
       height: auto;
+      cursor: pointer;
       img{
         max-width: 300px;
         width: 100%;
