--- a/src/app/product/modules/details/product-details.component.html
+++ b/src/app/product/modules/details/product-details.component.html
@@ -214,7 +214,8 @@
               </div>
             </div>
           </div>
-          <button class="copy">
+          <button class="copy"
+                  (click)="onCopyProductLink()">
             Скопировать ссылку
             <i class="fa fa-copy"></i>
           </button>
