--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="header-content">
-    <div class="logo"><img src="../../assets/logo2.JPG" alt="logo"></div>
+    <div [routerLink]="homeLink" class="logo"><img src="../../assets/logo2.JPG" alt="logo"></div>
     <div class="search">
       <input class="search-field" type="text" placeholder="Искать товары">
       <i class="fa fa-search"></i>
     </div>
     <div class="icons">
       <a (click)="logout()"><i class="fa fa-heart-o"></i></a>
-      <a href="#"><i class="fa fa-user-o"></i></a>
+      <a [routerLink]="profileLink"><i class="fa fa-user-o"></i></a>
       <a [routerLink]="cartLink"><i class="fa fa-shopping-cart"></i></a>
     </div>
   </div>
