--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,14 +1,12 @@
 <div class="auth-page">
   <div class="container">
-    <form class="auth-form" [formGroup]="formGroup" (submit)="onFormSubmit()">
+    <form class="auth-form">
       <h2 class="form-title">Login</h2>
       <label for="email" class="form-control">
-        <input class="form-control-input" type="text" id="email" placeholder="Email" autocomplete="off"
-               formControlName="login">
+        <input class="form-control-input" type="text" id="email" placeholder="Email" autocomplete="off">
       </label>
       <label for="password" class="form-control">
-        <input class="form-control-input" type="password" id="password" placeholder="Password" autocomplete="off"
-               formControlName="password">
+        <input class="form-control-input" type="password" id="password" placeholder="Password" autocomplete="off">
       </label>
       <label for="happy" class="form-control label-checkbox">
         <input type="checkbox" class="input-checkbox" id="happy">
