--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "assets/font-awesome-4.7.0/css/font-awesome.css";
+//@import "assets/font-awesome-4.7.0/css/font-awesome.css";
 
 * {
   padding: 0;
