Add a second modular layer account, add additional navigation to it and then

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
       <i class="fa fa-search"></i>
     </div>
     <div class="icons">
-      <a (click)="logout()"><i class="fa fa-heart-o"></i></a>
-      <a [routerLink]="profileLink"><i class="fa fa-user-o"></i></a>
+      <a href="#"><i class="fa fa-heart-o"></i></a>
+      <a [routerLink]="accountLink"><i class="fa fa-user-o"></i></a>
       <a [routerLink]="cartLink"><i class="fa fa-shopping-cart"></i></a>
     </div>
   </div>
