Add the functionality to recharge the balance of the user, add validation of the card using the algorithm Luhn

--- a/src/app/account/profile/profile.component.html
+++ b/src/app/account/profile/profile.component.html
@@ -10,13 +10,13 @@
       </div>
       <div class="profile-info">
         <h2 class="profile-nickname title">
-          {{user?.name}}
+          {{user.name}}
         </h2>
         <h3 class="profile-email">
-          {{user?.email}}
+          {{user.email}}
         </h3>
         <h3 class="profile-balance">
-          {{user.balance}}
+          balance: {{user.balance}}
         </h3>
       </div>
     </div>
