--- a/src/app/account/payment/payment.component.html
+++ b/src/app/account/payment/payment.component.html
@@ -1,1 +1,64 @@
-<p>!payment</p>
+<div class="payment-content">
+  <h2>Пополнение счёта</h2>
+  <form [formGroup]="cardNumberGroup">
+    <label for="cardNumber">
+      Номер карты *
+      <input
+        [formControl]="getCardNumberControl()"
+        id="cardNumber"
+        placeholder="Номер карты">
+
+      <div *ngIf="getCardNumberControl().dirty">
+        <p [class.invalid]="getCardNumberControl().invalid"></p>
+        <p [class.valid]="getCardNumberControl().valid"></p>
+      </div>
+    </label>
+    <label for="cvv" class="medium">
+      Cvv *
+      <input  type="number"
+              id="cvv"
+              name="cvv"
+              formControlName="cvv"
+              min="100"
+              max="9999"
+              placeholder="Cvv код вашей карты"
+      >
+      <div class="error" *ngIf="cardNumberGroup.controls['cvv'].errors?.['min']">
+        Cvv должен быть больше 100
+      </div>
+      <div class="error" *ngIf="cardNumberGroup.controls['cvv'].errors?.['max']">
+        Cvv должен быть меньше 9999
+      </div>
+      <div class="error" *ngIf="cardNumberGroup.controls['cvv'].errors?.['required']">
+        Поле Cvv не должно быть пустым
+      </div>
+
+    </label>
+    <label for="date" class="medium">
+      Месяц / Год *
+      <input  type="text" id="date" name="date" formControlName="date" placeholder="Месяц/год  вашей карты" maxlength="5">
+      <div class="error" *ngIf="cardNumberGroup.controls['date'].errors?.['pattern']">
+        Проверьте правильность поля пример:  07/23 или 11/25
+      </div>
+      <div class="error" *ngIf="cardNumberGroup.controls['date'].errors?.['required']">
+        Поле  Месяц / Год не должно быть пустым
+      </div>
+
+    </label>
+    <label for="value">
+      Сумма пополнения *
+      <input  type="number" id="value" name="value" formControlName="value" placeholder="Сумма пополнения">
+      <div class="error" *ngIf="cardNumberGroup.controls['value'].errors?.['min']">
+        Минимальная сумма пополнения 1
+      </div>
+      <div class="error" *ngIf="cardNumberGroup.controls['value'].errors?.['max']">
+        Максимальная сумма пополнения 10000000
+      </div>
+      <div class="error" *ngIf="cardNumberGroup.controls['value'].errors?.['required']">
+        Поле  Сумма пополнения не должно быть пустым
+      </div>
+
+    </label>
+    <button (click)="submitForm()">Пополнить счёт</button>
+  </form>
+</div>
