--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -9,20 +9,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    @media screen and (max-width: 850px){
-      flex-direction: column;
-      align-items: center;
-      justify-content: initial;
-    }
   }
   &_sidebar{
     max-width: 240px;
     padding: 0 10px;
     align-self: flex-start;
-    @media screen and (max-width: 850px) {
-      align-self: initial;
-      margin-bottom: 20px;
-    }
     width: 100%;
     &_list{
       display: flex;
@@ -51,13 +42,13 @@
         border-top:2px solid #ebebeb;
         transition: 0.3s;
         &.active{
-          color:#a8b324;
-          border-color: #a8b324;
+          color:red;
+          border-color: lightpink;
           transition: 0.3s;
         }
         &:hover{
-          color:#a8b324;
-          border-color: #a8b324;
+          color:red;
+          border-color: lightpink;
           transition: 0.3s;
         }
       }
@@ -66,12 +57,6 @@
   &_content{
     align-self: flex-start;
     width: 75%;
-    @media screen and (max-width: 850px) {
-      align-self: initial;
-      min-width: 320px;
-      width: 100%;
-      max-width: 100%;
-    }
     padding: 0 10px;
   }
 }
