--- a/src/app/account/payment/payment.component.scss
+++ b/src/app/account/payment/payment.component.scss
@@ -1,11 +1,9 @@
-$grey-color: #525761;
-$red: #d23735;
-$green: green;
+
 $text-font-size: 16px;
 
 * {
-  font-family: Lato, serif;
-  color: $grey-color;
+  font-family: Montserrat, serif;
+  color: black;
 }
 
 div.payment-content {
@@ -18,7 +16,11 @@ div.payment-content {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  gap:20px;
   margin: 0 auto;
+  font-size: 20px;
+  color: red;
+  font-weight: 500;
   label{
     display: flex;
     width: 100%;
@@ -37,7 +39,7 @@ div.payment-content {
   }
 
   form {
-    max-width: 360px;
+    max-width: 420px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -60,7 +62,7 @@ div.payment-content {
     }
     input, input:focus {
       margin-top: 5px;
-      border: 1px solid $grey-color;
+      border: 1px solid black;
       border-radius: 4px;
       padding: 5px;
       outline: none;
@@ -69,10 +71,10 @@ div.payment-content {
       font-size: $text-font-size;
 
       &.invalid, &.ng-dirty {
-        border-color:  $red;
+        border-color:  red;
       }
       &.ng-valid{
-        border-color: $green;
+        border-color: green;
       }
 
     }
@@ -93,12 +95,12 @@ div.payment-content {
       font-size: $text-font-size;
 
       &.valid:after {
-        color: $green;
+        color: green;
         content: 'Номер карты валиден';
       }
 
       &.invalid:after {
-        color: $red;
+        color: red;
         content: 'Номер карты невалиден';
       }
     }
