--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -9,6 +9,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
   }
   &_sidebar{
     max-width: 240px;
