--- a/src/app/account/payment/payment.component.scss
+++ b/src/app/account/payment/payment.component.scss
@@ -26,12 +26,9 @@ div.payment-content {
     width: 100%;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 40px;
+    padding-bottom: 8px;
     position: relative;
     margin-bottom: 10px;
-    &:not(:last-child){
-      padding-bottom: 35px;
-    }
   }
 
   h2 {
@@ -78,30 +75,17 @@ div.payment-content {
       }
 
     }
-    div.error{
-      position: absolute;
-      bottom: 5px;
-      left: 0;
-      right: 0;
-      text-align: center;
-      font-size: $text-font-size;
-    }
-    p {
-      position: absolute;
-      bottom: 5px;
-      left: 0;
-      right: 0;
-      text-align: center;
-      font-size: $text-font-size;
+    .errors {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      align-items: flex-start;
+      padding-top: 8px;
+      gap: 8px 0;
 
-      &.valid:after {
-        color: green;
-        content: 'Номер карты валиден';
-      }
-
-      &.invalid:after {
+      .error {
+        font-size: 16px;
         color: red;
-        content: 'Номер карты невалиден';
       }
     }
   }
